--- a/.github/workflows/deploy-apps.yml
+++ b/.github/workflows/deploy-apps.yml
@@ -9,6 +9,10 @@ on:
       - "pipeline/**"
       - ".github/workflows/deploy-apps.yml"
 
+concurrency:
+  group: deploy-apps-${{ github.ref }}
+  cancel-in-progress: true
+
 permissions:
   id-token: write
   contents: read
@@ -63,7 +67,7 @@ jobs:
       - name: Deploy API zip
         run: |
           success=0
-          for attempt in {1..3}; do
+          for attempt in {1..8}; do
             set +e
             output=$(az webapp deploy \
               --resource-group "${{ steps.tfout.outputs.resource_group }}" \
@@ -79,15 +83,15 @@ jobs:
               success=1
               break
             fi
-            if echo "$output" | grep -q "504"; then
-              echo "Kudu timeout detected (attempt $attempt/3). Retrying..."
-              sleep 30
+            if echo "$output" | grep -Eq "Status Code: (400|409|504)"; then
+              echo "Transient Kudu deployment collision/timeout (attempt $attempt/8). Retrying..."
+              sleep 45
               continue
             fi
             exit "$exit_code"
           done
           if [ "$success" -ne 1 ]; then
-            echo "API deployment failed after 3 attempts."
+            echo "API deployment failed after 8 attempts."
             exit 1
           fi
 
