--- a/.github/workflows/deploy-apps.yml
+++ b/.github/workflows/deploy-apps.yml
@@ -32,6 +32,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Setup Python 3.11
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
       - name: Azure Login (OIDC)
         uses: azure/login@v2
         with:
@@ -97,6 +102,7 @@ jobs:
 
       - name: Build Function zip
         run: |
+          rm -rf pipeline/.python_packages
           python -m pip install --upgrade pip
           python -m pip install -r pipeline/requirements.txt --target pipeline/.python_packages/lib/site-packages
           cd pipeline
